# BioProfileKit

./: Dockerfile  MANIFEST.in  Makefile  README.md  __main__.py  compose.yaml  pyproject.toml
src/: app.py
src/qc_eda/basic/: numerical_data.py
src/qc_eda/biological/: biological_data.py
src/templates/: LandingPage.jinja  columns.jinja  general_statistics.jinja  numeric_overview.jinja
