[build-system]
requires = [
    "setuptools>=80.9.0",
    "wheel>=0.44.0",
    "cython>=3.2.1",
    "numpy>=2.3.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "BioProfileKit"
version = "0.1"
description = "BioProfileKit analysis biological tabular data"
readme = "README.md"
authors = [
    {name = "Sonja Diedrich", email = "sonja.diedrich@computational.bio.uni-giessen.de"},
    {name = "Maria Hansen", email = "maria.hansen@computational.bio.uni-giessen.de"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
keywords = ["bioinformatics", "data-analysis", "proteomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "cython==3.2.1",
    "click>=8.3.1",
    "Jinja2==3.1.6",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "plotly==6.4.0g",
    "scipy==1.16.3",
    "termcolor==3.2.0",
    "pyarrow==22.0.0",
    "peptides==0.5.0",
    "iteration_utilities==0.13.0",
    "requests==2.32.5",
    "goatools==1.5.3",
    "importlib_resources==6.5.2",
    "biopython==1.86",
    "weblogo==3.7.12"

]
[project.urls]
Homepage="https://github.com/BioWarlock/BioProfileKit/"
Repository="https://github.com/BioWarlock/BioProfileKit/"

[project.optional-dependencies]
cli = ["click"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
"static" = ["static/**/*"]
"templates"= ["*.jinja"]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.pyc",
    "*/__pycache__/*",
    "*.egg-info"
]

[project.scripts]
bioprofilekit = "app:cli"
